# rustina

./: .gitignore  Cargo.toml  README.md
docx/word/_rels/: document.xml.rels
src/: local_ip.rs  main.rs  parse_args.rs
