[package]
name = "rustina"
version = "0.1.0"
authors = ["Deesea"]
description = "A quick PoC for the Follina Vuln."
liciense = "MIT"
repository = "https://github.com/dee-sea/rustina.git"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
walkdir = "2"
d = "0.0.1"
regex = "0.1"
